--- a/snakeMake/assemblyValidation/envs/freebayes.yaml
+++ b/snakeMake/assemblyValidation/envs/freebayes.yaml
@@ -1,10 +1,12 @@
 name: freebayes
 channels:
   - conda-forge
+  - anaconda
   - bioconda
   - defaults
 dependencies:
   - freebayes ==1.3.1
+  - perl-base
   - bcftools ==1.10
   - parallel ==20190522
   - bedtools >=2.29
