--- a/snakeMake/assemblyValidation/envs/freebayes.yaml
+++ b/snakeMake/assemblyValidation/envs/freebayes.yaml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - freebayes ==1.3.1
   - perl-base
+  - perl-list-util
   - bcftools ==1.10
   - parallel ==20190522
   - bedtools >=2.29
