--- a/snakeMake/pilonCorrection/Snakefile
+++ b/snakeMake/pilonCorrection/Snakefile
@@ -2,22 +2,24 @@ import os
 
 os.makedirs("logs", exist_ok=True)
 configfile: "default.json"
-ASM, EXT = os.path.splitext(os.path.split("asm1/{assembly}.fa")[-1])
 
 max_iteration = 2
 wildcard_constraints:
-    iteration = "\d+"
+    iteration = '\d{1,2}',
+    extension = '(fa|fna|fasta)'
+
+ASM, EXT = os.path.splitext(os.path.split(config["assembly"])[-1])
 
 def getAssembly(wildcards):
     if int(wildcards.iteration) == 1:
-        return "asm1/%s.fa" % (wildcards.assembly)
+        return config["assembly"]
     else:
-        return "output/pilon_%d.%s.fa" % (int(wildcards.iteration) - 1, wildcards.assembly)
+        return "output/%s_pilon_%d.%s" % (wildcards.assembly, int(wildcards.iteration) - 1, wildcards.extension)
 
 
 rule all:
     input:
-        "output/pilon_%d.%s.fa" % (max_iteration, ASM)
+        "output/%s_pilon_%d.%s" % (ASM, max_iteration, EXT)
 
 rule bwa:
     input:
@@ -25,11 +27,11 @@ rule bwa:
         reads_r1 = config['illumina']['R1'],
         reads_r2 = config['illumina']['R2']
     output:
-        temp('output/.{iteration}/{assembly}.bam')
+        temp('output/.{iteration}/{assembly}_{extension}.bam')
     benchmark:
-        'benchmarks/{assembly}_bwa_{iteration}.tsv'
+        'benchmarks/{assembly}_{extension}_bwa_{iteration}.tsv'
     log:
-        'logs/bwa_{assembly}_{iteration}.log'
+        'logs/bwa_{assembly}_{extension}_{iteration}.log'
     conda:
         'envs/polishing.yaml'
     threads:
@@ -44,11 +46,11 @@ checkpoint get_contigs:
     input:
         assembly = getAssembly
     output:
-        directory('output/.{iteration}_{assembly}_ctgs/')
+        directory('output/.{iteration}_{assembly}_{extension}/')
     benchmark:
-        'benchmarks/{assembly}_ctgs_{iteration}.tsv'
+        'benchmarks/{assembly}_{extension}_ctgs_{iteration}.tsv'
     log:
-        'logs/ctgs_{assembly}_{iteration}.log'
+        'logs/ctgs_{assembly}_{extension}_{iteration}.log'
     threads:
         1
     params:
@@ -61,14 +63,14 @@ checkpoint get_contigs:
 rule pilon_contig:
     input:
         assembly = getAssembly,
-        bam = 'output/.{iteration}/{assembly}.bam',
-        contig = 'output/.{iteration}_{assembly}_ctgs/{contig}'
+        bam = 'output/.{iteration}/{assembly}_{extension}.bam',
+        contig = 'output/.{iteration}_{assembly}_{extension}/{contig}'
     output:
-        temp('output/.{iteration}_{assembly}/{contig}.fa')
+        temp('output/.{iteration}_{assembly}/{contig}.{extension}')
     benchmark:
-        'benchmarks/{assembly}_pilon_{iteration}_{contig}.tsv'
+        'benchmarks/{assembly}_{extension}_pilon_{iteration}_{contig}.tsv'
     log:
-        'logs/pilon_{assembly}_{iteration}_{contig}.log'
+        'logs/pilon_{assembly}_{extension}_{iteration}_{contig}.log'
     conda:
         'envs/polishing.yaml'
     threads:
@@ -76,13 +78,14 @@ rule pilon_contig:
     resources:
         memory = lambda wildcards, attempt: 16000 * attempt
     params:
-        output_dir = 'output/.{iteration}_{assembly}/',
+        output_dir = 'output/.{iteration}_{assembly}_{extension}/',
         output_prefix = '{contig}',
         max_mem = lambda wildcards, resources: f'{int(resources.memory / 1000)}G'
     shell:
-        'module load pilon/1.23'
-        'java -Xmx{params.max_mem} -jar $PILON_HOME/pilon-1.23.jar --genome {input.assembly} --bam {input.bam} --output {params.output_prefix} --outdir {params.output_dir} '
-        '--changes --fix indels --threads {threads} --targets {wildcards.contig} 2> {log}'
+        """
+        module load pilon/1.23
+        java -Xmx{params.max_mem} -jar $PILON_HOME/pilon-1.23.jar --genome {input.assembly} --bam {input.bam} --output {params.output_prefix} --outdir {params.output_dir} --changes --fix indels --threads {threads} --targets {wildcards.contig} 2> {log}
+        """
 
 
 def pilon_all_contigs(wildcards):
@@ -91,10 +94,12 @@ def pilon_all_contigs(wildcards):
     pilon_contig_output = checkpoints.get_contigs.get(**wildcards).output[0]
     iteration = wildcards.iteration
     assembly = wildcards.assembly
-    batch_list = expand('output/.{iteration}_{assembly}/{contig}.fa',
+    extension = wildcards.extension
+    batch_list = expand('output/.{iteration}_{assembly}/{contig}.{extension}',
                         iteration=iteration,
                         assembly=assembly,
-                        contig=glob_wildcards(f'output/.{iteration}_{assembly}_ctgs/{{contig}}').contig)
+                        extension=extension,
+                        contig=glob_wildcards(f'output/.{iteration}_{assembly}_{extension}/{{contig}}').contig)
     return batch_list
 
 
@@ -102,12 +107,12 @@ rule pilon_round:
     input:
         pilon_all_contigs
     output:
-        'output/pilon_{iteration}.{assembly}.fa'
+        'output/{assembly}_pilon_{iteration}.{extension}'
     benchmark:
-        'benchmarks/{assembly}_gather_{iteration}.tsv'
+        'benchmarks/{assembly}_{extension}_gather_{iteration}.tsv'
     threads:
         1
     log:
-        'logs/gather_{assembly}_{iteration}.log'
+        'logs/gather_{assembly}_{extension}_{iteration}.log'
     shell:
         'cat {input} > {output} 2> {log}'
