local rules update

--- a/snakeMake/pilonCorrection/Snakefile
+++ b/snakeMake/pilonCorrection/Snakefile
@@ -3,6 +3,8 @@ import os
 os.makedirs("logs", exist_ok=True)
 configfile: "default.json"
 
+local_rules: pilon_round
+
 max_iteration = 2
 wildcard_constraints:
     iteration = '\d{1,2}',
