--- a/snakeMake/assemblyValidation/envs/base.yaml
+++ b/snakeMake/assemblyValidation/envs/base.yaml
@@ -8,7 +8,7 @@ dependencies:
     - pysam
     - jinja2
     - markdown
-    - mdx_smartypants
+    - smartypants
     - matplotlib
     - scipy
     - samtools
