--- a/snakeMake/hifiMAGManuscript/Snakefile
+++ b/snakeMake/hifiMAGManuscript/Snakefile
@@ -19,6 +19,7 @@ config = {
 "/lustre/project/forage_assemblies/sheep_project/complete_flye/flye4.contigs.fasta",
 "/lustre/project/forage_assemblies/sheep_project/complete_flye/clr1.contigs.fasta",
 "/lustre/project/forage_assemblies/sheep_project/complete_flye/clr2.contigs.fasta",
+"/lustre/project/rumen_longread_metagenome_assembly/assemblies/sheep/clr3.contigs.fasta"
 ],
 "samples" : {
 "Lib101_L1" : [
@@ -38,6 +39,7 @@ config = {
       "/lustre/project/rumen_longread_metagenome_assembly/sheep_poop/illumina_wgs/LIB101996_S4_L004_R2_001.fastq.gz"
     ]
 },
+"hifi" : "/lustre/project/rumen_longread_metagenome_assembly/sheep_poop/sheep_poop_sequel_combined_CCS.fasta.gz",
 "bin3c" : "/lustre/project/forage_assemblies/sheep_project/bin3C/bin3C.py",
 "blobtools" : "/lustre/project/forage_assemblies/sheep_project/blobtools/blobtools",
 "hic" : {
@@ -56,7 +58,7 @@ def getAssemblyBaseName(files):
     return [re.sub('\.fa.{0,3}', '', os.path.basename(x)) for x in files]
 
 
-localrules: link_assemblies
+localrules: link_assemblies, modify_bin3c, separate_contigs, cov_by_comp_table
 rule all:
 
 
@@ -84,7 +86,7 @@ rule bwa_index:
     log:
         config['logdir'] + "/{assembly_group}.log"
     conda:
-        "../envs/metabat.yaml"
+        "envs/overall.yaml"
     shell:
         """
         bwa index {input} 2> {log}
@@ -110,19 +112,38 @@ rule bwa_mem:
         #pipe_cmd = "samtools sort -o {output} -",
         threads = 8
     conda:
-        "../envs/metabat.yaml"
+        "envs/overall.yaml"
     shell:
         """
         bwa mem -t {params.threads} {params.extra} {input.reference} {input.r1} {input.r2} | samtools sort -o {output} - >> {log} 2>&1
         """
+
+rule ccs_align:
+    input:
+        reference = "assembly/{assembly_group}.fa",
+        reads = config["hifi"]
+    output:
+        "mapping/{assembly_group}.ccs.bam"
+    params:
+        temp = "mapping/{assembly_group}.tmp"
+    threads: 4
+    conda:
+        "envs/overall.yaml"
+    shell:
+        """
+        minimap2 -ax asm20 -R '@RG\tID:CCS\tSM:CCS' {input.reference} {input.reads} | samtools sort -T {params.temp} -o {output} -
+        samtools index {output}
+        """
+
 rule create_bam_index:
     input:
         "mapping/{assembly_group}/{file}.bam"
     output:
         "mapping/{assembly_group}/{file}.bam.bai"
-
     threads:
         1
+    conda:
+        "envs/overall.yaml"
     shell:
         "samtools index {input}"
 
@@ -191,6 +212,8 @@ rule das_tool:
                postfix=["_DASTool_summary.txt", "_DASTool_hqBins.pdf", "_DASTool_scores.pdf"]),
         expand("binning/DASTool/{{assembly_group}}.full_{bins}.eval",
                bins= BINS),
+        "binning/DASTool/{assembly_group}.full_proteins.faa.archaea.scg",
+        "binning/DASTool/{assembly_group}.full_proteins.faa.bacteria.scg",
         cluster_attribution = "binning/DASTool/{assembly_group}.full_cluster_attribution.tsv"
     threads: 10
     log:
@@ -199,6 +222,8 @@ rule das_tool:
         binnames = ",".join(BINS),
         scaffolds2bin = lambda wildcards, input: ",".join(input.binfiles),
         output_prefix = "binning/DASTool/{assembly_group}.full"
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         module load usearch/11.0.667
@@ -209,6 +234,20 @@ rule das_tool:
         mv {params.output_prefix}_DASTool_scaffolds2bin.txt {output.cluster_attribution} &>> {log}
         """
 
+rule get_scg_tables:
+    input:
+        arch = "binning/DASTool/{assembly_group}.full_proteins.faa.archaea.scg",
+        bact = "binning/DASTool/{assembly_group}.full_proteins.faa.bacteria.scg"
+    output:
+        short= "binning/{assembly_group}.scg_proteins.shortform.tab",
+        bed = "binning/{assembly_group}.scg_proteins.scg.bed"
+    shell:
+        """
+        cat {input.arch} {input.bact} | grep '>' | perl -e '@ids = ("ID", "partial", "start_type", "rbs_motif", "rbs_spacer", "gc_cont"); print "ContigID\tStart\tEnd\tOrient\t" . join("\t", @ids) . "\n"; while(<STDIN>){chomp; $_ =~ s/\>//g; @lsegs = split(/\s*\#\s*/); @bsegs = split(/\;/, $lsegs[-1]); print "$lsegs[0]\t$lsegs[1]\t$lsegs[2]\t$lsegs[3]"; foreach my $k (@bsegs){$k =~ s/^.+\=//; print "\t$k";} print "\n";}' >  {output.short}
+        cat {output.short} | perl -lane '$r = $F[0]; $r  =~ s/_\d{1,3}$//; print "$r\t$F[1]\t$F[2]\t$F[0]";' > {output.bed}
+        """
+
+
 rule diamond:
     input:
         "assembly/{assembly_group}.fa"
@@ -217,6 +256,8 @@ rule diamond:
     threads: 16
     params:
         db = config['diamonddb']
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         diamond blastx --query {input} --db {params.db} --threads {threads} --outfmt 6 --sensitive --max-target-seqs 1 --evalue 1e-25 -o {output}
@@ -232,6 +273,8 @@ rule blobtools_taxify:
         tax = config['diamondtaxid'],
         blobtools = config['blobtools'],
         outbase = "blobtools/taxify"
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         {params.blobtools} taxify -f {input} -m {params.tax} -s 0 -t 2 -o {params.outbase}
@@ -247,6 +290,8 @@ rule blobtools_cov:
     params:
         outbase = "blobtools/{assembly_group}",
         blobtools = config['blobtools']
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         {params.blobtools} map2cov -i {input.fasta} -b {input.bams} -o {params.outbase}
@@ -258,15 +303,17 @@ def getCovStr(covs):
 rule blobtools_create:
     input:
         contigs = "assembly/{assembly_group}.fa",
-        covs = expand("blobtools/{assembly_group}.{sample}.bam.cov", assembly_group=getAssemblyBaseName(config["assemblies"]), sample=config["samples"]),
+        covs = expand("blobtools/{{assembly_group}}.{sample}.bam.cov",  sample=config["samples"]),
         tax = "blobtools/taxify.{assembly_group}.diamondout.tsv.taxified.out"
     output:
         blobdb = "blobtools/{assembly_group}.blobDB.json"
     params:
-        cstr = getCovStr(expand("blobtools/{assembly_group}.{sample}.bam.cov", assembly_group=getAssemblyBaseName(config["assemblies"]), sample=config["samples"])),
+        cstr = getCovStr(expand("blobtools/{{assembly_group}}.{sample}.bam.cov",  sample=config["samples"])),
         outpre = "blobtools/{assembly_group}",
         db = config["ncbidb"],
         blobtools = config['blobtools']
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         echo "using {params.cstr}"
@@ -282,6 +329,8 @@ rule blobtools_viewplot:
         table = "blobtools/table.{assembly_group}.blobDB.table.txt"
     params:
         blobtools = config['blobtools']
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         {params.blobtools} plot -i {input.blobdb} --notitle --format pdf -r superkingdom -o blobtools/supkingdom
@@ -297,6 +346,8 @@ rule blobtab_condense:
         crop = "blobtools/table.{assembly_group}.lens.tab"
     params:
         script = workflow.basedir + "/scripts/trimBlobTable.py"
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         python {params.script} {input.table} {output.crop}
@@ -318,6 +369,8 @@ rule blobview_plot:
     params:
         interlaced = lambda wildcards, input : interlace(input),
         script = workflow.basedir + "/scripts/gcSupKingPlot.R"
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         Rscript {params.script} {params.interlaced}
@@ -344,6 +397,8 @@ rule checkm_contigs:
         table = "tables/{assembly_group}.contigs.checkm.txt",
         directory = "contigs_checkm/{assembly_group}"
     threads: 8
+    conda:
+        "envs/overall.yaml"
     shell:
         """
         checkm lineage_wf -f {output.table} -t {threads} -x fasta {output.directory}
@@ -395,13 +450,16 @@ rule contig_cov_by_comp_plot:
         comp = expand("tables/{assembly_group}.ctg_cov_by_comp.tab", assembly_group=getAssemblyBaseName(config["assemblies"]))
     output:
         "figures/contig_facet_cov_by_comp_scatter.pdf",
-        "figures/contig_top80_cov_by_comp.pdf"
+        "figures/contig_top80_cov_by_comp.pdf",
+        "figures/contig_ridge_top95_coverage.pdf"
     params:
         interlaced = lambda wildcards, input : ctg_interlace(input),
         script = workflow.basedir + "/scripts/CovByCompPlot.R"
+    conda:
+        "envs/overall.yaml"
     shell:
         """
-        Rscript {params.script} {params.interlaced}
+        Rscript {params.script} contig {params.interlaced}
         """
 
 checkpoint mag_generation:
@@ -411,21 +469,67 @@ checkpoint mag_generation:
     output:
         dir = directory("mags/{assembly_group}/"),
         counts = "binning/DASTool/{assembly_group}.full_cluster_counts.tab"
+    conda:
+        "envs/overall.yaml"
     script:
         "scripts/magGeneration.py"
 
 def all_mags(wildcards):
     '''
     '''
-    mag_generation_output = checkpoints.mag_generation.get(**wildcards).output[0]
-    iteration = wildcards.iteration
-    assembly = wildcards.assembly
-    extension = wildcards.extension
-    batch_list = expand('output/.{iteration}_{assembly}/{contig}.{extension}',
-                        iteration=iteration,
-                        assembly=assembly,
-                        extension=extension,
-                        contig=glob_wildcards(f'output/.{iteration}_{assembly}_{extension}/{{contig}}').contig)
+    mag_generation_output = checkpoints.mag_generation.get(**wildcards).output["dir"]
+    assembly_group = wildcards.assembly_group
+    batch_list = expand('mags/{assembly_group}/{bin}.fa',
+                        assembly_group = assembly_group,
+                        bin=glob_wildcards(os.path.join(mag_generation_output, "{bin}.fa").bin)
     return batch_list
 
 #TODO: Work on MASH comparisons and get the magphase pipeline running
+
+rule binCovCompTable:
+    input:
+        scaffs = "binning/DASTool/{assembly_group}.full_cluster_attribution.tsv",
+        comp = "binning/DASTool/{assembly_group}.full_DASTool_summary.txt",
+        blob = "blobtools/table.{assembly_group}.blobDB.table.txt"
+    output:
+        "tables/{assembly_group}.bin_cov_by_comp.tab"
+    params:
+        asm = "{assembly_group}",
+        script = workflow.basedir + "/scripts/create_bin_coverage_table.py"
+    conda:
+        "envs/overall.yaml"
+    shell:
+        """
+        python3 {params.script} {params.asm} {input.scaffs} {input.blob} {input.comp} {output}
+        """
+
+rule binCovPlot:
+    input:
+        comp = expand("tables/{assembly_group}.bin_cov_by_comp.tab", assembly_group=getAssemblyBaseName(config["assemblies"]))
+    output:
+        "figures/bin_facet_cov_by_comp_scatter.pdf",
+        "figures/bin_top80_cov_by_comp.pdf",
+        "figures/bin_ridge_top95_coverage.pdf"
+    params:
+        interlaced = lambda wildcards, input : ctg_interlace(input),
+        script = workflow.basedir + "/scripts/CovByCompPlot.R"
+    conda:
+        "envs/overall.yaml"
+    shell:
+        """
+        Rscript {params.script} bin {params.interlaced}
+        """
+
+rule makeMashMap:
+    input:
+        all_mags
+    output:
+        "mash/{assembly_group}.msh"
+    params:
+        dir = "mags/{assembly_group}",
+        temp = "{assembly_group}.temp",
+        script = workflow.basedir + "/scripts/mash_sketch_bins.pl"
+    shell:
+        """
+        perl {params.script} {params.dir} {params.temp} {output}
+        """
