--- a/snakeMake/hifiMAGManuscript/envs/overall.yaml
+++ b/snakeMake/hifiMAGManuscript/envs/overall.yaml
@@ -2,10 +2,7 @@ channels:
     - anaconda
     - bioconda
     - conda-forge
-    - ruby-lang
-    - r
 dependencies:
-    - python=3.9
     - diamond=0.9.30
     - samtools=1.9
     - bwa=0.7.17
@@ -17,12 +14,6 @@ dependencies:
     - numpy
     - matplotlib
     - perl-bioperl
-    - das_tool=1.1.1
-    - diamond=0.9.30
-    - r-essentials
-    - r-ggridges
-    - r-gridExtra
-    - r-tidyverse
-    - prodigal=2.6.3
+    - prodigal
     - checkm-genome
     - minimap2
