--- a/snakeMake/snpCalling/envs/all.yaml
+++ b/snakeMake/snpCalling/envs/all.yaml
@@ -8,10 +8,11 @@ dependencies:
     - samtools
     - bwa
     - sra-tools>=2.11.0
-    - freebayes ==1.3.1
+    - freebayes
     - perl-base
     - perl-list-util
-    - bcftools==1.10
-    - parallel==20190522
-    - bedtools>=2.29
-    - sed==4.7
+    - bcftools
+    - parallel
+    - bedtools
+    - sed
+    - deepvariant
