--- a/snakeMake/sraGeneticBackground/envs/pangenome.yaml
+++ b/snakeMake/sraGeneticBackground/envs/pangenome.yaml
@@ -7,7 +7,8 @@ dependencies:
     - seaborn
     - snakemake
     - samtools
-    - gatk4
+    - openjdk
+    - gatk4=4.5.0.0
     - vg
     - elprep
     - bcftools
