new snapshot script

--- a/snakeMake/captureSeqAnalysis/env/all.yaml
+++ b/snakeMake/captureSeqAnalysis/env/all.yaml
@@ -17,3 +17,6 @@ dependencies:
     - bioconda::bedtools
     - snakemake-executor-plugin-slurm
     - snakemake-executor-plugin-cluster-generic
+    - graphviz
+    - bioconda::wally
+    - tabix
